<resources>
    <string name="app_name">CourseWork</string>
    <!-- Menu drawer strings -->
    <string name="ad_cat1">Advertisements</string>
    <string name="ad_my_ads">My ads</string>
    <string name="all_ads">Ads</string>
    <string name="fav_ads">Favourite ads</string>
    <string name="ad_car">Cars</string>
    <string name="ad_pc">Personal computers</string>
    <string name="ad_smartphone">Smartphones</string>
    <string name="ad_dm">Household equipment</string>

    <string name="ad_cat2">Account</string>
    <string name="ac_sign_up">Sign up</string>
    <string name="ac_sign_in">Sign In</string>
    <string name="ac_sign_out">Sign Out</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="empty">Empty</string>
    <string name="guest">Guest</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <string name="default_web_client_id">401000349299-a63sttv0b2gti3qlqqvcurp22gk06v0g.apps.googleusercontent.com</string>

    <string name="choose_country">*Choose country</string>
    <string name="choose_city">*Choose city</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="tel">Telephone</string>
    <string name="enter_email">Enter email</string>
    <string name="tel_number">tel number</string>
    <string name="index">Index</string>
    <string name="with_send">With send</string>
    <string name="category">Category</string>
    <string name="select_category">*Select category</string>
    <string name="price">Price</string>
    <string name="input_price">Input price</string>
    <string name="description">Description</string>
    <string name="input_description">Input description</string>
    <string name="publish">Publish</string>
    <string name="title">Title</string>
    <string name="input_title">Input title</string>

    <string name="no_result">No result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- for AdMob -->
    <string name="ad_banner_id">ca-app-pub-3940256099942544/9214589741</string>
    <string name="ad_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="remove_ads">Remove ads</string>


    <string-array name="category">
        <item>Cars</item>
        <item>Personal computers</item>
        <item>Smartphones</item>
        <item>Household equipment</item>
    </string-array>

</resources>