<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/grey"
    tools:context=".EditAdvertisementActivity">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPagerImages"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.viewpager2.widget.ViewPager2>

                    <ImageButton
                        android:id="@+id/ibOpenPicker"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/choose_img_btn_bg_selector"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/viewPagerImages"
                        app:srcCompat="@android:drawable/ic_menu_edit" />

                    <TextView
                        android:id="@+id/tvImageCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/primary_color"
                        android:padding="5dp"
                        android:text="1/3"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/viewPagerImages"
                        app:layout_constraintEnd_toEndOf="@+id/viewPagerImages" />

                    <ProgressBar
                        android:id="@+id/pBarLoad"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/viewPagerImages"
                        app:layout_constraintEnd_toEndOf="@+id/viewPagerImages"
                        app:layout_constraintStart_toStartOf="@+id/viewPagerImages"
                        app:layout_constraintTop_toTopOf="@+id/viewPagerImages" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/country" />

                    <TextView
                        android:id="@+id/tvChooseCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/choose_country"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="2dp"
                        android:background="#9A7A7A" />

                    <TextView
                        android:id="@+id/tvTitleCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/city" />

                    <TextView
                        android:id="@+id/tvChooseCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/choose_city"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="2dp"
                        android:background="#9A7A7A" />

                    <TextView
                        android:id="@+id/tvTitleTel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/tel" />

                    <EditText
                        android:id="@+id/edTelNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/tel_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="2dp"
                        android:background="#9A7A7A" />

                    <TextView
                        android:id="@+id/tvTitleEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/email_hint" />

                    <EditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="2dp"
                        android:background="#9A7A7A" />

                    <TextView
                        android:id="@+id/tvTitleIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/index" />

                    <EditText
                        android:id="@+id/edIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/index"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="7dp"
                        android:background="#9A7A7A" />

                    <CheckBox
                        android:id="@+id/checkBoxWithSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/with_send"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="7dp"
                        android:background="#9A7A7A" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/category" />

                    <TextView
                        android:id="@+id/tvSelectCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/select_category"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="2dp"
                        android:background="#9A7A7A" />

                    <TextView
                        android:id="@+id/tvMainTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/title" />

                    <EditText
                        android:id="@+id/edTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/input_title"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="2dp"
                        android:background="#9A7A7A" />

                    <TextView
                        android:id="@+id/tvTitlePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="Price $" />

                    <EditText
                        android:id="@+id/edPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/input_price"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="2dp"
                        android:background="#9A7A7A" />

                    <TextView
                        android:id="@+id/tvTitleDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/description" />

                    <EditText
                        android:id="@+id/edDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/input_description"
                        android:inputType="textMultiLine"
                        android:maxLength="120"
                        android:maxLines="5"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="7dp"
                        android:background="#9A7A7A" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btPublish"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#9E7070"
                android:text="@string/publish"
                android:textColor="@color/green_main"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="#3C3C3C"
        android:alpha="0.7"
        android:clickable="true"
        android:focusable="auto"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>