<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:fitsSystemWindows="true"
    tools:context=".FilterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter filters:"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="30dp"
                />
            <TextView
                android:id="@+id/tvTitleCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/country" />

            <TextView
                android:id="@+id/tvChooseCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/choose_country"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2dp"
                android:background="#9A7A7A" />

            <TextView
                android:id="@+id/tvTitleCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/city" />

            <TextView
                android:id="@+id/tvChooseCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/choose_city"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="2dp"
                android:background="#9A7A7A" />


            <TextView
                android:id="@+id/tvTitleIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="10dp"
                android:text="@string/index" />

            <EditText
                android:id="@+id/edIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/index"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="7dp"
                android:background="#9A7A7A" />

            <CheckBox
                android:id="@+id/checkBoxWithSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:buttonTint="@color/primary_color"
                android:text="@string/with_send"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="7dp"
                android:background="#9A7A7A" />

            <Button
                android:id="@+id/btApplyFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="10dp"
                android:text="Apply filter"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/green_main"
                android:backgroundTint="#9E7070"/>

            <Button
                android:id="@+id/btClearFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="10dp"
                android:text="Clear filter"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/green_main"
                android:backgroundTint="#9E7070"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>